# ORTEX-Data-Engineer-Challenge

./: README.md  part1_exercise_query.sql  part2_exercise_python.py  pyproject.toml
